[B]Pneumatic 0.3.1[/B]
- Fix for remote fake rar writing in Frodo 
- Better "Find incomplete" dialog

[B]Pneumatic 0.3.0[/B]
- Lots of fixes
- New icon and fanart
- Option to delete local nzb's
- Support for strm and nzb in same dir
- Support for remote shares in Frodo

[B]Pneumatic 0.2.12[/B]
- Set_streaming now set for unpacked content
- Correct postprocessing on canceled downloads

[B]Pneumatic 0.2.11[/B]
- Support for unpacked content
- Debug logging settings
- Pause only SAB queue item

[B]Pneumatic 0.2.10[/B]
- Do not fail downloads when selecting "Just download"

[B]Pneumatic 0.2.9[/B]
- ProgressDialog.close() added for XBMC-Frodo users

[B]Pneumatic 0.2.8[/B]
- Support for folder renaming in SABnzbd
- Bug fixes

[B]Pneumatic 0.2.7[/B]
- Fixed incomplete error

[B]Pneumatic 0.2.6[/B]
- Switched to PLAYER_CORE_AUTO
- Added support for s00 s01 ..
- Removed forgotten notification
- Allow progress dialog to close or play back can fail
- Log what incomplete folders gets removed

[B]Pneumatic 0.2.5[/B]
- NoneType in nf_to_bottom list to SAB
- NoneType error due to timing with SAB
- Option to cache nzb
- Dont crash when tvrage is down

[B]Pneumatic 0.2.4[/B]
- Enhanced local nzb browsing. Support for multiple folders (context menu to add and remove)
- Bugfix for a special case where SAB reports 0 byte file size
- Support for Neon skin

[B]Pneumatic 0.2.3[/B]
- "Crazy names" fix and cleaned up notifications. Stay tuned for more fun things.

[B]Pneumatic beta4[/B]
- ETA and speed calculations in progress dialog
- bumped revision to 0.2.2

[B]Pneumatic beta3[/B]
- Local nzb browsing and upload to local or remote SABnzbd installations (check settings)
- Unicode/Latin character support for nzb's and folders
- Fixes of bugs since beta 2.1