@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.program.pneumatic"
        name="Pneumatic"
-       version="0.3.1"
+       version="0.4.0"
        provider-name="Popeye">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
-    <import addon="plugin.program.sabnzbd" version="3.1.1"/>
+    <import addon="plugin.program.sabnzbd" version="3.2.0"/>
   </requires>
-  <extension point="xbmc.python.pluginsource"
-            library="default.py">
-        <provides>executable</provides>
+  <extension point="xbmc.python.pluginsource" library="default.py">
+    <provides>executable</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
     <summary>Pneumatic</summary>
     <description>Pneumatic is a NZB engine for XBMC.</description>
-    <disclaimer></disclaimer>
   </extension>
 </addon>
