@@ -1,3 +1,7 @@
+[B]Pneumatic 0.4.0[/B]
+- Depends on SABnzbd addon
+- Helix compatible
+
 [B]Pneumatic 0.3.1[/B]
 - Fix for remote fake rar writing in Frodo 
 - Better "Find incomplete" dialog
